Fixed bug #35509 (string constant as array key has different behavior inside object)